# Contract-Priority-Management-Analysis

./: .gitignore  BUILD_GUIDE.md  FRONTEND_FEATURES.md  QUICKSTART.md  README.md  TEST_DATA.md  create_icons.py  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: Alpha口径说明.md  应用功能说明.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_seed.sql  003_config_tables.sql  004_config_seed.sql  005_config_change_log.sql  006_filter_presets.sql  007_batch_operations.sql  008_transform_rules.sql  009_spec_family.sql  010_rhythm_config.sql  011_aggregation_config.sql  012_data_validation.sql  013_strategy_versioning.sql  014_import_audit.sql  015_meeting_cockpit.sql  016_perf_seed.sql  017_test_data_300.sql  018_intervention_batch_id.sql
src-tauri/src/: commands.rs  main.rs
src-tauri/src/config/: loader.rs  mod.rs  types.rs
src-tauri/src/db/: init.rs  mod.rs  repository.rs  schema.rs
src-tauri/src/io/: conflict.rs  csv_handler.rs  excel_handler.rs  expression_engine.rs  field_mapper.rs  generic_parser.rs  import_pipeline.rs  json_handler.rs  mod.rs  row_converter.rs  types.rs  validator.rs  value_transformer.rs
src-tauri/src/kpi/: calculator.rs  consensus.rs  customer_analysis.rs  export.rs  mod.rs  ranking.rs  rhythm_analysis.rs  risk.rs
src-tauri/src/scoring/: mod.rs  p_score.rs  priority.rs  s_score.rs
src-tauri/src/validation/: mod.rs
src/api/: tauri.ts
src/components/: BatchOperationsDialog.css  BatchOperationsDialog.tsx  ConfigPanel.css  ConfigPanel.tsx  ContractDetailSidebar.css  ContractDetailSidebar.tsx  Dialog.css  ExportDialog.tsx  FilterPanel.css  FilterPanel.tsx  ImportDialog.tsx  SandboxCharts.tsx  (+2 more)
(+31 files in other folders)
