[package]
name = "dpm-app"
version = "0.2.0"
description = "合同动态优先级管理系统"
authors = ["DPM Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "path-all", "shell-open", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# 🔥 性能优化：数据库连接池
r2d2 = "0.8"
r2d2_sqlite = "0.23"

# 导入/导出功能依赖
csv = "1.3"
calamine = { version = "0.24", features = ["dates"] }
rust_xlsxwriter = "0.79"

# 清洗规则功能依赖
regex = "1.10"
indexmap = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
